--- a/.github/workflows/ec2_aws_deploy.yml
+++ b/.github/workflows/ec2_aws_deploy.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         ssh -i ~/.ssd/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST}} << EOF
           cd /home/ubuntu/crew-station
+          ls /home/ubuntu/crew-station
           docker stop crew-station || true
           docker rm crew-station || true
           docker rmi crew-station || true
